styles/botcheck.css
.botcheck-feed-container {
  display: inline-block;
}
.el-dropdown-menu {
  z-index: 5001 !important;
}
.el-dropdown-item {
  font-size: 13px;
}
.botcheck {
  color: #657786;
  font-size: 14px;
  line-height: 1;
  margin-bottom: 8px;
  position: relative;
  cursor: pointer;
}
.botcheck .icon {
  width: 18px;
  height: 18px;
  position: absolute;
  bottom: 0;
  background-image: none;
  display: inline-block;
}
.botcheck .icon img {
  width: 18px;
  display: inline-block;
}
.botcheck .status-text {
  padding-left: 22px;
  line-height: 1;
  color: #657786;
  vertical-align: middle;
  box-decoration-break: clone;
  -webkit-box-decoration-break: clone;
  font-size: 14px;
  display: inline-block;
}
.botcheck .status-text.bot {
  color: #FB0015;
}
.botcheck.button {
  border-radius: 25px;
  background: #FFD6D7;
  user-select: none;
  cursor: pointer;
}
.botcheck.button .icon {
  position: relative;
  vertical-align: middle;
  padding-left: 10px;
  padding-top: 3px;
  width: 18px;
  display: inline-block;
}
.botcheck.button .status-text {
  padding-left: 4px;
  padding-right: 10px;
  vertical-align: middle;
  margin-top: 3px;
  font-size: 12px;
}
.botcheck.button.pull-up {
  margin-top: 0;
  margin-left: 0;
  height: 24px;
}
.botcheck.inline {
  display: inline-block;
}
.botcheck.pull-up {
  margin-top: -4px;
  margin-left: 4px;
}
.botcheck.retweet {
  margin-top: 3px;
  margin-left: 3px;
}
.botcheck-dialog {
  z-index: 5000 !important;
}
.botcheck-dialog .el-dialog {
  width: 640px;
}
.botcheck-dialog .el-container {
  padding: 0 20px;
}
.botcheck-dialog .el-main {
  padding-top: 10px;
  padding-bottom: 0;
}
.botcheck-dialog .el-dropdown {
  position: absolute;
  top: 15px;
  right: 20px;
}
.botcheck-dialog .el-icon-arrow-down {
  font-weight: bold;
  cursor: pointer;
}
.botcheck-dialog img {
  width: 80px;
  display: inline-block;
}
.botcheck-dialog .header {
  font-size: 17px;
  font-weight: bold;
  display: block;
  margin-bottom: 10px;
  letter-spacing: 0.4px;
  color: #333333;
}
.botcheck-dialog strong {
  color: #333333;
}
.botcheck-dialog span:not(.header) {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.4px;
}
.botcheck-dialog span:not(.header).status-text {
  margin-bottom: 3rem;
  display: inline-block;
}
.botcheck-dialog .share-link {
  cursor: pointer;
  display: inline-block;
  position: absolute;
  bottom: 15px;
  right: 20px;
}
.botcheck-dialog .share-link i {
  font-size: 18px;
  color: #FB0015;
  vertical-align: middle;
}
.botcheck-dialog .share-link span {
  font-size: 13px;
  display: inline-block;
  margin-left: 4px;
  color: #FB0015;
  vertical-align: middle;
  margin-top: 2px;
}
.botcheck-dialog .share-link.positive i {
  color: #00D68C;
}
.botcheck-dialog .share-link.positive span {
  color: #00D68C;
}
.botcheck-dialog.whitelist .el-dialog {
  width: 325px;
  height: 260px;
}
.botcheck-dialog.whitelist .el-dialog__body {
  padding: 0;
}
.botcheck-dialog.whitelist .el-main {
  padding: 15px 0 0 0;
}
.botcheck-dialog.whitelist .el-row {
  width: 100%;
}
.botcheck-dialog.whitelist .header {
  color: #666666;
  font-weight: 400;
  font-size: 16px;
  margin-bottom: 0;
}
.botcheck-dialog.whitelist .item {
  display: flex;
  width: 100%;
  padding: 10px 0;
  align-items: center;
}
.botcheck-dialog.whitelist .item:after {
  content: '';
  display: block;
  clear: both;
}
.botcheck-dialog.whitelist .item .name {
  flex: 1;
}
.botcheck-dialog.whitelist .item .name .realName {
  color: #666666;
  font-size: 15px;
  font-weight: bold;
  display: block;
}
.botcheck-dialog.whitelist .item .name .screenName {
  color: #BFBFBF;
  font-size: 13px;
}
.botcheck-dialog.whitelist .item .delete {
  cursor: pointer;
}
.botcheck-dialog.whitelist .item .delete i {
  color: #666666;
  font-size: 24px;
  font-weight: bold;
}

